sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:4: error: illegal start of simple expression
  do){
    ^AlgBubbleSort1:13: error: 'while' expected but '}' found.
} 
^